wordpress/wp-content/themes/Eris/assets/sass/_presentation.scss
// @author Carl Albrecht-Buehler
// @author Tim Steele

// SITE-WIDE TAG STYLES
html, body {
  height: 100%;
  text-align: left;
  background: $lightest-color;
  margin: 0;
  padding: 0;
  font-family: $basefont;
  line-height: 1.4;
  color: sears( body );
}

.kmart a {
  color: kmart( link );
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
  &:visited {
    color: kmart( link );
  }
}

.sears a {
  color: sears( link );
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
  &:visited {
    color: sears( link );
  }
}
// END SITE-WIDE TAG STYLES

// CONVENIENCE CLASSES
.right {
  float: right;
}
.left {
  float: left;
}

.hide {
  display:none;
}

.bullets {
  margin: em-adjust( 1em 0 ); 
  padding: 0 0 0 40px; 
}

ol.bullets {
  list-style-type:decimal;
}

ul.bullets {
  list-style-type:disc;
}

.bold {
  font-weight: 700;
}

.italic {
  font-style: italic;
}

.faint {
  color: sears( secondary-link );
}

.upcase {
  text-transform: uppercase;
}

.downcase {
  text-transform: lowercase;
}

.background_light-gray {
  background-color: #f3f3f3;
}

.link-emulator {
  cursor: pointer;
  &:hover {
    text-decoration: underline;
  }
}
.sears .link-emulator {
  color: sears( link );
}
.kmart .link-emulator {
  color: kmart( link );
}

// SPRITES
#header.sears form #button_search, #header.sears form #input_search,
.sears_button
{
  background-image:url(#{$sears-img}sprite_global.png);
}

#header.kmart form #button_search, #header.kmart form #input_search,
.kmart_button
{
  background-image:url(#{$kmart-img}sprite_global.png);
}

// COMMONLY USED ELEMENTS
.member {
  .info {
    word-wrap: break-word;
    h4, address {
      @extend .bold;
    }
    h5, p {
      @extend .faint;
    }
    address {
      display: block;
      @extend .bold;
    }
  }
}

// CREST - the assembly of a user's image, title, name and address
// Handles the display of user's images, names, titles and addresses (their crest)
.crest {
  word-wrap: break-word;
  img {
    display: block;
    margin: 0 auto;
  }
  h4 {
    font-size:font-size(10);
    padding: .5em 0;
  }
  h4, h5, address {
    @extend .bold;
  }
  &.labeled {
    h4 {
      background: sears( badge ) url('#{$img}sprite-user.png') repeat-x left bottom;
      text-align: center;
      // removing rounded corners per client's request -CAB 9.14.2012
      // @include border-radius( 0 0 10px 10px );
    }
    h4, h4 a {
      color: $lightest-color;
      line-height: 1;
    }
    .tail {
      background: url('#{$img}sprite-user.png') no-repeat center top;
      height: 10px;
      overflow: hidden;
    }
  }
}

.user-info {
  overflow:hidden;
  word-wrap: break-word;
  .user_avatar {
    a {
      display:block;
      text-align:left;
      width:100%;
    }
    img {
      width:100%;
    }
  }
  .user_screenname, .user_location {
    font-size:font-size(12);
    font-weight:bold;
  }
  
}

.span4 .span4 .crest h4 {
  font-size: font-size( 10 );
}

.post {
  .content-date {
    color:#999999;
    display: block;
    float: right;
  }
  hgroup {
    @extend .bold;
  }
  h3 {
    font-size: font-size( 14 );
  }
  h2 {
    margin-top: .5em;
  }
  article {
    margin-top: .5em;
  }
  .post-actions {
    // font-size: font-size( 13 );
    margin-top: .5em;
  }
}

.excerpt {
  @extend .faint;
}


// GLOBAL ELEMENTS


// form elements
.input_text {
  // Do not set padding for left/right to 0.
  // IE8 no like this.
  padding:em-adjust( .3125em .01em );
  border:solid 1px sears( decorative );
  height:em-adjust( 1.25em );
}

.required:after, .optional:after {
  color: #999999;
  // font-size:.7857em;
  font-size: font-size( 12 );
}

.required:after {
  content: " Required";
}

.optional:after {
  content: " Optional";
}

.form-fields {
  & > li {
    margin-bottom:em-adjust( 1.35em );
  }
  label {
    display:block;
    font-size: font-size( 14 );
    font-weight:bold;
  }
}

.sears_button, .kmart_button {
  border-left:solid #ff9e6c;
  border-right:solid #cc6f35;
  border-width:0px 1px;
  color: $lightest-color;
  cursor:pointer;
  font-weight:bold;
  height:32px;
  margin-right:1em;
  padding:0em 1.5em;
  position:relative;
  text-shadow:1px 1px sears( sec-dec);
  @include border-radius( 5px );
}

.sears_button.azure, .kmart_button.azure {
  background-image: url('#{$sears-img}/sprite_global.png');
  border-color:#60768b;
  color:#366392;
  text-shadow:none;
}

.sears_button {
  background-position:0px -88px;
}

.sears_button.azure,
.kmart_button.azure {
  background-position:0px -140px;
  margin-right: 0px;
}

.kmart_button {
  background-position:0px -96px;
}

.error-message {
  display:none;
}

.error {
  input[type="text"], input[type="password"] {
    border:solid 1px #ff0000;
  }
  .error-message {
    background-color:#e41e13;
    color:$lightest-color;
    display:block;
    float:left;
    font-weight:bold;
    margin:10px 0px 0px;
    padding:em-adjust( .25em 1em );
    position:relative;
    @include border-radius( 5px );
    .error-pointer {
      background:transparent url(#{$img}error_pointer-arrow.png) no-repeat 0px 0px;
      height:9px;
      display:block;
      left:15px;
      position:absolute;
      top:-9px;
      width:19px;
    }
  }
}

.form-errors {
  color:#ff0000;
}

form {}

// FEATURED
.content-container .content-header {
  border-top:solid 1px #dddcdc;
  padding: em-adjust( .625em );
  @extend .bold;
  @extend .faint;
  h3 {
    font-size: font-size( 20 ); // 1.25em
  }
  h4 {
    font-size: font-size( 11 ); // .6875em
  }
}

.content-date {
  color: sears( secondary-decorative );
  font-size:font-size( 11 );
}
/* ... */

